--- a/resources/styles/themes/theme.css
+++ b/resources/styles/themes/theme.css
@@ -1521,6 +1521,7 @@ _:-ms-lang(x),
     min-width: 120px;
     min-height: 100px;
     display: flex;
+    font-size: 15px;
 }
 
 .documents__upload {
